// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms|Text color 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  color: #00a8d8;
}

<div
  className="c0"
>
  <span
    className="c1"
    color="blue"
  >
    Hello
  </span>
</div>
`;

exports[`Storyshots atoms|Text default 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Hello
  </span>
</div>
`;

exports[`Storyshots atoms|Text overview 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  margin: 1.25rem 0;
}

.c1:first-child {
  margin-top: 0;
}

.c1:last-child {
  margin-bottom: 0;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    README.md
  </p>
</div>
`;

exports[`Storyshots atoms|Text responsive 1`] = `
.c0 {
  padding: 12px;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  color: #00a8d8;
  font-size: 0.6875em;
}

@media screen and (min-width:40em) {
  .c1 {
    color: #ef5350;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    color: #379e4b;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    font-size: 1em;
  }
}

@media screen and (min-width:52em) {
  .c1 {
    font-size: 1.5em;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
    color={
      Array [
        "blue",
        "red",
        "green",
      ]
    }
    fontSize={
      Array [
        0,
        2,
        4,
      ]
    }
  >
    Resize your window to change me
  </span>
</div>
`;
